--- a/src/IndiraEsra.html
+++ b/src/IndiraEsra.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 <div class="container"> 
+    <div class="background-image"></div>
     <div class="todo-app">
        <h2>To-Do List <img src="images/icon.png"></h2> 
        <div class="row">
