--- a/src/IndiraEsra.html
+++ b/src/IndiraEsra.html
@@ -8,8 +8,10 @@
 </head>
 <body>
     <div class="background-image">
+        <div class="2ndTitle"><h1>Explore Stockholm</h1></div>
+        <div class="2ndSubitle"><h2>Search for Restaurants, Museums, and many more sights!</h2></div>
+
         <div class="floating-box">
-            <h1>Explore Stockholm</h1>
             <input type="text" id="searchInput" placeholder="Enter a place...">
             <button onclick="searchPlaces()">Search</button>
             <div id="placesList"></div>
