--- a/src/IndiraEsra.html
+++ b/src/IndiraEsra.html
@@ -1,28 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stockholm Tourism</title>
     <link rel="stylesheet" href="style.css">
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&display=swap');
-        @import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&family=Nanum+Myeongjo&display=swap');
-   </style>
+    
 </head>
+
 <body>
     <div class="background-image">
-        <div class="SecondTitle"><h1>Explore Stockholm</h1></div>
-        <div class="SecondSubtitle"><h2>Search for Restaurants, Museums, and many more sights!</h2></div>
+        <div class="SecondTitle">
+            <h1>Explore Stockholm</h1>
+        </div>
+        <div class="SecondSubtitle">
+            <h2>Search for Restaurants, Museums, and many more sights!</h2>
+        </div>
 
         <div class="floating-box">
-            <form class="search-form">
-                <input type="text" id="searchInput" placeholder="Type here...">
-                <button type="submit" onclick="searchPlaces(event)">Search</button>
-            </form>
+            <div class="inputAndButton">
+                <input type="text" id="searchInput" placeholder="What are you looking for?">
+                <button onclick="search()">Search</button>
+            </div>
             <div id="results"></div>
-        </div>    
-    </div>    
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
+
 </html>
