changed name of file, fixed redirection

--- a/src/landing.html
+++ b/src/landing.html
@@ -19,7 +19,7 @@
         function redirectToMain() {
             // Redirect to the main website after a short delay
             setTimeout(function () {
-                window.location.href = "IndiraEsra.html";
+                window.location.href = "index.html";
             }, 500); // Adjust the delay time as needed
         }
     </script>
