Added a dashed line to the landing page, changed landing page titles

--- a/src/landing.html
+++ b/src/landing.html
@@ -10,8 +10,9 @@
 
 <body>
     <div class="landing-page">
-        <h1>Welcome to Stockholm Tourism</h1>
-        <h3>Explore the beauty of Stockholm</h3>
+        <h1>Welcome to Stockholm</h1>
+        <h3>Discover the beauty of the city</h3>
+        <div class="dotted-line"></div>
         <button onclick="redirectToMain()">Explore</button>
     </div>
 
