Added comments, changed some class names to maintain conformity

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
             <h2>Search for Restaurants, Museums, and many more sights!</h2>
         </div>
 
-        <div class="floating-box">
+        <div class="floatingBox">
             <div class="inputAndButton">
                 <input type="text" id="searchInput" placeholder="What are you looking for?">
                 <button onclick="search()">Search</button>
