fixed toggleContainer method

--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
     <div class="floatingBox">
         <div class="inputAndButton">
             <input type="text" id="searchInput" placeholder="What are you looking for?">
-            <button onclick="search(); toggleContainer()">Search</button>
+            <button onclick="search()">Search</button>
         </div>
 
         <div id="mapDiv" style="display: none;">
@@ -36,6 +36,7 @@
 
     <div class="sidePanel">
         <h3>Search Results</h3>
+        
         <ul id="resultsList"></ul>
     </div>
     <script
