--- a/src/index.html
+++ b/src/index.html
@@ -57,6 +57,7 @@
     <div class="selectedPanel">
         <h3>Selected Places</h3>
         <ul id="selectedList"></ul>
+        <button onclick="Createroute()">Create Route</button>
     </div>
     <script
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC8S6HJq3Iw48pV49HB2WveJmk3XZ2Fsh8&libraries=places&callback=initializeMap"
