--- a/src/index.html
+++ b/src/index.html
@@ -9,12 +9,11 @@
 
 </head>
 
-
 <body>
-    <div class="container">
+    <div class="container"> <!-- Titles for top of the page-->
         <div class="imageLeft"></div>
         <div class="Titles">
-            <div class="SecondTitle"> <!-- TITLE-->
+            <div class="SecondTitle">
                 <h1>Explore Stockholm</h1>
             </div>
             <div class="SecondSubtitle">
@@ -24,7 +23,7 @@
         <div class="imageRight"></div>
     </div>
 
-    <div class="floatingBox"> <!-- Searchbox that sends input to javascript-->
+    <div class="floatingBox"> <!-- A box that contains text input fields and the map-->
         <div class="inputAndButton">
             <input type="text" id="searchInput" placeholder="What are you looking for?">
             <button onclick="search()">Search</button>
@@ -38,21 +37,24 @@
 
     <div class="sidePanel"> <!-- Sidepanel that has all the search results -->
         <h3>Search Results</h3>
-
         <ul id="resultsList"></ul>
     </div>
     <div class="selectedPanel"> <!-- sidepanel that includes all the selectedplaces-->
         <h3>Selected Places</h3>
         <ul id="selectedList"></ul>
-        <button onclick="Createroute()">Create Route</button> <!-- button that creates an optimized route when clicked -->
-        <button id="generatePDFBtn" style="display: none;" onclick="generatePDF()"> DOWNLOAD ROUTE  </button> <!-- Button that lets you download a pdf file when clicked-->
+        <button onclick="Createroute()">Create Route</button>
+        <!-- button that creates an optimized route when clicked -->
+        <button id="generatePDFBtn" style="display: none;" onclick="generatePDF()"> DOWNLOAD ROUTE </button>
+        <!-- Button that lets you download a pdf file when clicked-->
     </div>
     <!-- Script for javascript PDF -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
 
     <!-- API -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC8S6HJq3Iw48pV49HB2WveJmk3XZ2Fsh8&libraries=places&callback=initializeMap" async defer></script>
-   
+    <script
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC8S6HJq3Iw48pV49HB2WveJmk3XZ2Fsh8&libraries=places&callback=initializeMap"
+        async defer></script>
+
     <!-- JAVASCRIPT SCRIPT-->
     <script src="script.js"></script>
     </div>
